<resources>
    <string name="app_name">Inventory</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="category_overview">Overview</string>
    <string name="category_supplier">Supplier</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_supplier_name">Supplier Name</string>
    <string name="hint_product_supplier_phone">Supplier Phone No</string>
    <string name="saving_error">Error with saving the product</string>
    <string name="saving_success">Product saved with row id:</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_price">Unknown price</string>
    <string name="order_product">Order product</string>
    <string name="increase_error">Error with increasing quantity</string>
    <string name="increase_success">Quantity increased</string>
    <string name="decrease_error">Error with decreasing quantity</string>
    <string name="decrease_success">Quantity decreased</string>
    <string name="decrease_quantity">Decrease</string>
    <string name="increase_quantity">Increase</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <!--error messages-->
    <string name="error_in_updating">There was an error in updating the quantity.</string>
    <string name="quantity_bigger_then_one">No more items in stock</string>
    <string name="invalid_quantity">Quantity is less than 0.</string>
    <!--Missing inputted data-->
    <string name="missing_product_name">Product name is missing. Please enter a valid one and try again</string>
    <string name="missing_product_price">Product price is missing. Please enter a valid one and try again</string>
    <string name="missing_product_quantity">Product quantity is missing. Please enter a valid one and try again</string>
    <string name="missing_product_supplier_name">Product supplier name is missing. Please enter a valid one and try again</string>
    <string name="missing_product_supplier_phone">Product supplier phone is missing. Please enter a valid one and try again</string>
    <string name="quantity_empty">Quantity field is empty</string>
</resources>
