<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditorActivity">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_done"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/order"
        android:title="@string/order_product"
        app:showAsAction="always" />

    <item
        android:id="@+id/increase_quantity"
        android:title="@string/increase_quantity"
        android:icon="@drawable/plus"
        app:showAsAction="always" />
    <item
        android:id="@+id/decrease_quantity"
        android:icon="@drawable/minus"
        android:title="@string/decrease_quantity"
        app:showAsAction="always" />

</menu>