<?xml version="1.0" encoding="utf-8"?><!--edit a product inputted-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/two_weight"
            android:orientation="vertical"
            android:paddingLeft="@dimen/overview_padding"
            android:paddingRight="@dimen/overview_padding">

            <!--product name-->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />
            <!--price-->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="number" />
            <!--quantity-->
            <TextView
                style="@style/EditorFieldStyle"
                android:gravity="center_horizontal"
                android:text="@string/quantity" />

            <!--quantity linear layout-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/quantity_padding">

                <!--decrease quantity-->
                <Button
                    android:id="@+id/decrease_quantity"
                    android:layout_width="@dimen/quantity_button_size"
                    android:layout_height="@dimen/quantity_button_size"
                    android:layout_marginLeft="@dimen/quantity_button_padding"
                    android:layout_marginStart="@dimen/quantity_button_padding"
                    android:background="@drawable/minus" />

                <!--quantity number-->
                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_quantity"
                    android:inputType="number" />

                <!--increase quantity-->
                <Button
                    android:id="@+id/increase_quantity"
                    android:layout_width="@dimen/quantity_button_size"
                    android:layout_height="@dimen/quantity_button_size"
                    android:layout_marginEnd="@dimen/quantity_button_padding"
                    android:layout_marginRight="@dimen/quantity_button_padding"
                    android:background="@drawable/plus" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/two_weight"
            android:orientation="vertical"
            android:paddingLeft="@dimen/overview_padding"
            android:paddingRight="@dimen/overview_padding">

            <!--supplier name-->
            <EditText
                android:id="@+id/edit_product_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_supplier_name"
                android:inputType="textCapWords" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--supplier phone-->
                <EditText
                    android:id="@+id/edit_product_supplier_phone"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_supplier_phone"
                    android:inputType="text" />

                <!--call button-->
                <Button
                    android:id="@+id/call_supplier"
                    android:layout_width="@dimen/quantity_button_size"
                    android:layout_height="@dimen/quantity_button_size"
                    android:background="@drawable/call" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>